--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,12 +46,11 @@ jobs:
         uses: azure/k8s-set-context@v2
         with:
           method: service-account
-          k8s-url: https://54.234.165.15:6443
+          k8s-url: https://3.87.21.135:6443
           k8s-secret: ${{ secrets.KUBERNETES_SECRET }}
 
       - name: Deploy to the Kubernetes cluster
         uses: azure/k8s-deploy@v1
         with:
           namespace: default
-          manifests: |
-            kubernetes/deployment.yaml
+          manifests: kubernetes/deployment.yaml
