--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,5 +52,6 @@ jobs:
       - name: Deploy to the Kubernetes cluster
         uses: azure/k8s-deploy@v1
         with:
+          action: deploy
           namespace: default
           manifests: kubernetes/deployment.yaml
